# Attention-Mechanisms-in-Reinforcement-Learning

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_implementation.py
configs/: default.yaml
demo/: app.py
notebooks/: attention_rl_demo.ipynb
scripts/: train.py
src/: __init__.py
src/algorithms/: __init__.py  ppo_attention.py
src/models/: __init__.py  attention.py
src/utils/: __init__.py  trainer.py
tests/: test_attention_rl.py
